--- a/cycleStore/templates/dashboard_with_pivot.html
+++ b/cycleStore/templates/dashboard_with_pivot.html
@@ -1,3 +1,4 @@
+{% url 'logi' as logi_url %}
 <!doctype html>
 <html lang="en">
 
@@ -28,7 +29,7 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-info bg-info">
         <div class="container">
-            <a class="navbar-brand text-white" href="index.html">CycleStore</a>
+            <a class="navbar-brand text-white" href="#">CycleStore</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -37,7 +38,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link text-white" href="index.html">Dashboard <span
+                        <a class="nav-link text-white" href="#">Dashboard <span
                                 class="sr-only">(current)</span></a>
                     </li>
                 </ul>
@@ -76,7 +77,7 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-4">
-                                <a class="text-decoration-none text-dark" href="staff.html">
+                                <a class="text-decoration-none text-dark" href="addAndShow">
                                     <div class="card my-card shadow text-center p-3">
                                         <h4>Finance and Accounting <i class="fas fa-users"></i></h4>
                                         
@@ -84,7 +85,7 @@
                                 </a>
                             </div>
                             <div class="col-md-4">
-                                <a class="text-decoration-none text-dark" href="product.html">
+                                <a class="text-decoration-none text-dark" href="snm">
                                     <div class="card my-card shadow text-center p-3">
                                         <h4>Sales and Marketing <i class="fas fa-box"></i></h4>
                                        
@@ -92,7 +93,7 @@
                                 </a>
                             </div>
                             <div class="col-md-4">
-                                <a class="text-decoration-none text-dark" href="order.html">
+                                <a class="text-decoration-none text-dark" href="logi">
                                     <div class="card my-card shadow text-center p-3">
                                         <h4>Logistics <i class="fas fa-shipping-fast"></i></h4>
                                         
