--- a/cycleStore/templates/finance/addandshow.html
+++ b/cycleStore/templates/finance/addandshow.html
@@ -9,9 +9,14 @@
     
     <input type="submit" class="btn btn-success" value="Add">
 </form>
+
+
+<a href="fna" class="btn btn-warning btn-large">Report</a>
 </div>
 <div class="col-sm-8">
-    <h4 class="text-center alert alert-info">Show Data</h4>
+    <h4 class="text-center alert alert-info">Show Data 
+        
+      </h4>
     {% if fin %} 
     <table class="table table-hover">
         <thead>
